# scholarly-ai

./: .dockerignore  DOCKER_SETUP.md  README.md  compose.yaml  compose_example.yaml  docker-start.ps1  pyproject.toml  test_postgres_store.md
backend/app/: arg_app.py  run_agent.py  run_client.py  run_service.py  streamlit_app.py
backend/app/agents/: __init__.py  agents.py  lazy_agent.py  openreview_agent.py  paper_research_supervisor.py  rag_assistant.py  utils.py
backend/app/agents/tools/: __init__.py  calculator.py  openreview.py  utils.py  vector_db.py
backend/app/client/: client.py
backend/app/core/: llm.py  settings.py
backend/app/memory/: mongodb.py  postgres.py  sqlite.py
backend/app/schema/: models.py  schema.py
backend/app/service/: document_processing.py  service.py  utils.py
backend/app/service/routers/: __init__.py  agent.py  document.py  feedback.py  history.py  metadata.py  vectordb.py
docker/: Dockerfile.app  Dockerfile.service
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/Chat/: AgentSelector.tsx  ChatWindow.tsx  MessageInput.tsx  MessageList.tsx  ModelSelector.tsx
frontend/src/components/Layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend/src/components/Paper/: PaperSearch.tsx
frontend/src/components/Settings/: Settings.tsx
frontend/src/components/VectorDB/: VectorDBManagement.tsx
frontend/src/stores/: appStore.ts  chatStore.ts  paperStore.ts  vectorDBStore.ts
scripts/: create_chroma_db.py  create_chroma_db_local.py
src/: arg_app.py  run_service.py
src/agents/: chatbot.py  llama_guard.py  openreview_agent.py  rag_assistant.py  tools.py
src/agents/tools/: __init__.py  math_tools.py  paper_tools.py  utils.py  vector_db_tools.py
src/client/: client.py
src/core/: llm.py  local_vllm.py  logging_config.py  settings.py
src/memory/: __init__.py  sqlite.py
src/schema/: models.py  schema.py
src/service/: service.py
src/vector_databases/vector_databases/: meta.json
tests/llm/: one.py
